force-app/main/default/objects/Opportunity/fields/Day_of_the_Month__c.field-meta.xml
<CustomField>
    <fullName>Day_of_the_Month__c</fullName>
    <formula>DAY(Contract_Execution_Date__c)</formula>
    <label>Day of the Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>