force-app/main/default/objects/Opportunity/fields/Days_Between_Pitch_and_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Pitch_and_Appointment__c</fullName>
    <description>Calculates the number of days between when the appointment was set to when the pitch is scheduled</description>
    <formula>Appt_Date__c  - Appointment_Set_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the number of days between when the appointment was set to when the pitch is scheduled</inlineHelpText>
    <label>Days Between Pitch and Appointment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>