force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Pitch__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Pitch__c</fullName>
    <formula>TODAY()- Most_Recent_Pitch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Pitch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>