force-app/main/default/objects/Opportunity/fields/Deal_Goes_Live_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Deal_Goes_Live_Next_Month__c</fullName>
    <formula>IF( MONTH(Today()) = MONTH(ADDMONTHS(Contract_Execution_Date__c,-1)) ,True,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Goes Live Next Month</label>
    <type>Checkbox</type>
</CustomField>