force-app/main/default/objects/Opportunity/fields/Deal_of_the_Day__c.field-meta.xml
<CustomField>
    <fullName>Deal_of_the_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deal of the Day</description>
    <label>Deal of the Day</label>
    <type>Checkbox</type>
</CustomField>