force-app/main/default/objects/Opportunity/fields/Deal_Score__c.field-meta.xml
<CustomField>
    <fullName>Deal_Score__c</fullName>
    <label>Deal Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>