force-app/main/default/objects/Opportunity/fields/Dealer_Product__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Product__c</fullName>
    <inlineHelpText>Only choose one product.</inlineHelpText>
    <label>Dealer Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>Prospekt</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Social Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>