force-app/main/default/objects/Opportunity/fields/Dealership__c.field-meta.xml
<CustomField>
    <fullName>Dealership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealership</label>
    <referenceTo>Dealership__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>