force-app/main/default/objects/Opportunity/fields/Decision_Maker_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker Confirmed</label>
    <type>Checkbox</type>
</CustomField>