force-app/main/default/objects/Opportunity/fields/Decision_Maker_Sold__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All of them have said yes.</inlineHelpText>
    <label>Decision Maker Sold</label>
    <type>Checkbox</type>
</CustomField>