force-app/main/default/objects/Opportunity/fields/Did_you_run_through_presentation__c.field-meta.xml
<CustomField>
    <fullName>Did_you_run_through_presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you run through presentation?</label>
    <type>Checkbox</type>
</CustomField>