force-app/main/default/objects/Opportunity/fields/Did_you_talk_to_KDM__c.field-meta.xml
<CustomField>
    <fullName>Did_you_talk_to_KDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did you talk to KDM?</label>
    <type>Checkbox</type>
</CustomField>