force-app/main/default/objects/Opportunity/fields/DocuSign_Signed__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gets checked what the DocuSign Status is marked completed.</description>
    <label>Contract Signed</label>
    <type>Checkbox</type>
</CustomField>