force-app/main/default/objects/Opportunity/fields/DocuSign_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Signed_Date__c</fullName>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>