force-app/main/default/objects/Opportunity/fields/Emails_After_Most_Recent_Pitch__c.field-meta.xml
<CustomField>
    <fullName>Emails_After_Most_Recent_Pitch__c</fullName>
    <label>Emails After Most Recent Pitch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>