force-app/main/default/objects/Opportunity/fields/Establish_All_Outstanding_Steps_to_Sign__c.field-meta.xml
<CustomField>
    <fullName>Establish_All_Outstanding_Steps_to_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Establish all outstanding steps to sign contract and set up kick off call</inlineHelpText>
    <label>Establish Outstanding Steps (See Help)</label>
    <type>Checkbox</type>
</CustomField>