force-app/main/default/objects/Opportunity/fields/Estimated_Placement_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Placement_Fee__c</fullName>
    <description>Talent Solutions Applicant</description>
    <formula>IF(
OR(
ISNULL(Position_Requisition__r.Placement_Fee__c),
Position_Requisition__r.Placement_Fee__c = 0
),
Position_Requisition__r.Flat_Rate_Fee__c,
Position_Requisition__r.Estimated_Salary__c * Position_Requisition__r.Placement_Fee__c
)</formula>
    <inlineHelpText>If the related Position Req Placement Fee % is blank or 0, this default value is the Position Req’s Flat Rate Fee. Otherwise, the value is the Position Reqs (Estimated Salary X Placement Fee%)</inlineHelpText>
    <label>Estimated Placement Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>