force-app/main/default/objects/Opportunity/fields/Exclusive_Target_List__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Target_List__c</fullName>
    <description>This gets populated on the proposal from Docusign.</description>
    <inlineHelpText>This gets populated on the proposal from Docusign.</inlineHelpText>
    <label>Exclusive Target List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>