force-app/main/default/objects/Opportunity/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>They are scared of losing market.</inlineHelpText>
    <label>Concerned About Exclusivity</label>
    <type>Checkbox</type>
</CustomField>