force-app/main/default/objects/Opportunity/fields/Execute_on_Follow_up_Items__c.field-meta.xml
<CustomField>
    <fullName>Execute_on_Follow_up_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute on Follow-up Items</label>
    <type>Checkbox</type>
</CustomField>