force-app/main/default/objects/Opportunity/fields/Exhibit__c.field-meta.xml
<CustomField>
    <fullName>Exhibit__c</fullName>
    <label>Exhibit #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>