force-app/main/default/objects/Opportunity/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <label>Exhibit Start Date</label>
    <type>Date</type>
</CustomField>