force-app/main/default/objects/Opportunity/fields/First_Pitch_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pitch_Date__c</fullName>
    <description>Used to track the first initial pitch scheduled by sales rep for this opportunity. Helps with tracking sales cycle.</description>
    <label>First Pitch Date</label>
    <type>Date</type>
</CustomField>