force-app/main/default/objects/Opportunity/fields/Gather_Required_Assessment_Information__c.field-meta.xml
<CustomField>
    <fullName>Gather_Required_Assessment_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gather Required Assessment Information</label>
    <type>Checkbox</type>
</CustomField>