force-app/main/default/objects/Opportunity/fields/Generic_Email__c.field-meta.xml
<CustomField>
    <fullName>Generic_Email__c</fullName>
    <formula>OR(CONTAINS(Main_Contact_Email__c  , &apos;gmail&apos;) ,
CONTAINS(Main_Contact_Email__c  ,&apos;att&apos;),
CONTAINS(Main_Contact_Email__c  ,&apos;ymail&apos;),
CONTAINS(Main_Contact_Email__c  ,&apos;cox&apos;),
CONTAINS(Main_Contact_Email__c  ,&apos;msn&apos;),
CONTAINS(Main_Contact_Email__c  ,&apos;netscape&apos;),
CONTAINS(Main_Contact_Email__c  ,&apos;yahoo&apos;),
CONTAINS(Main_Contact_Email__c  ,&apos;verizon&apos;),
CONTAINS(Main_Contact_Email__c  , &apos;comcast&apos;),
CONTAINS(Main_Contact_Email__c  ,&apos;aol&apos;),
CONTAINS(Main_Contact_Email__c ,&apos;sbcglobal&apos;),
CONTAINS(Main_Contact_Email__c  ,&apos;bellsouth&apos;),
CONTAINS(Main_Contact_Email__c  , &apos;hotmail&apos;),
CONTAINS(Main_Contact_Email__c  , &apos;outlook&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generic Email</label>
    <type>Checkbox</type>
</CustomField>