force-app/main/default/objects/Opportunity/fields/Greenlines_to_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Greenlines_to_Agreement__c</fullName>
    <inlineHelpText>Adjustments made to agreement template in Docusign</inlineHelpText>
    <label>Greenlines to Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>