force-app/main/default/objects/Opportunity/fields/Hold_Proposal_Build_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Hold_Proposal_Build_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Proposal Build Meeting</label>
    <type>Checkbox</type>
</CustomField>