force-app/main/default/objects/Opportunity/fields/Hot_Spot__c.field-meta.xml
<CustomField>
    <fullName>Hot_Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Brennan Industrial Truck Company, to communicate to Abstrakt areas around prospects they want Abstrakt to focus</description>
    <label>Hot Spot</label>
    <type>Checkbox</type>
</CustomField>