force-app/main/default/objects/Opportunity/fields/Hot_Spot_Detail__c.field-meta.xml
<CustomField>
    <fullName>Hot_Spot_Detail__c</fullName>
    <description>This is created for Brennan Industrial Truck Company and is related to Hot Spot checkbox field</description>
    <label>Hot Spot Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>