force-app/main/default/objects/Opportunity/fields/Hubspot_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Deal_ID__c</fullName>
    <label>Hubspot Deal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>