force-app/main/default/objects/Opportunity/fields/Implementation_Packet_Edit_Link__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Packet_Edit_Link__c</fullName>
    <inlineHelpText>This is populated with the edit link once the packet is partially filled out.</inlineHelpText>
    <label>Implementation Packet Edit Link</label>
    <type>Url</type>
</CustomField>