force-app/main/default/objects/Opportunity/fields/Importance_of_Brand_Awareness__c.field-meta.xml
<CustomField>
    <fullName>Importance_of_Brand_Awareness__c</fullName>
    <description>The level of important  brand awareness ranks for your organization.</description>
    <inlineHelpText>What is the level of important brand awareness ranks for your organization?</inlineHelpText>
    <label>Importance of Brand Awareness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Important</fullName>
            </value>
            <value>
                <fullName>Fairly Important</fullName>
            </value>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Slightly Important</fullName>
            </value>
            <value>
                <fullName>Not Important</fullName>
            </value>
            <value>
                <fullName>No Opinion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>