force-app/main/default/objects/Opportunity/fields/Inbound_Pitch_Result__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Pitch_Result__c</fullName>
    <label>Inbound Pitch Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed Engaged</fullName>
            </value>
            <value>
                <fullName>Completed Lost</fullName>
            </value>
            <value>
                <fullName>Completed Not a Fit</fullName>
            </value>
            <value>
                <fullName>Completed Nurture</fullName>
            </value>
            <value>
                <fullName>Completed Proposal</fullName>
            </value>
            <value>
                <fullName>Completed Scheduled Next</fullName>
            </value>
            <value>
                <fullName>Contacted Not Pitched</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Territory Closed</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>