force-app/main/default/objects/Opportunity/fields/Inbound_Proposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Proposal_Notes__c</fullName>
    <label>Inbound Proposal Notes</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>