force-app/main/default/objects/Opportunity/fields/Include_Email_Blast_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Include_Email_Blast_Addendum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Email Blast Addendum</label>
    <type>Checkbox</type>
</CustomField>