force-app/main/default/objects/Opportunity/fields/Industry_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Industry_Playbook__c</fullName>
    <formula>CASE( Industry__c ,
&apos;IT&apos;,&apos;https://playbooks.kiite.ai/p/01EEBDQ4DWQ7RSY9PD4HWNEJZR&apos;,
&apos;www.google.com&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Playbook</label>
    <type>Text</type>
</CustomField>