force-app/main/default/objects/Opportunity/fields/Initial_Opportunity_Assessment_Completed__c.field-meta.xml
<CustomField>
    <fullName>Initial_Opportunity_Assessment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Initial opportunity assessment (B2B or B2C) completed and provided to sales lead.</inlineHelpText>
    <label>Initial Opportunity Assessment Completed</label>
    <type>Checkbox</type>
</CustomField>