force-app/main/default/objects/Opportunity/fields/Interview_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Interview_Assigned_To__c</fullName>
    <description>Used to populate the point of contact from Position Requestion that will be conducting the interview of Talent Solutions job applicants.</description>
    <label>Interview Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>