force-app/main/default/objects/Opportunity/fields/Interviewer_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_s_Email__c</fullName>
    <label>Interviewer&apos;s Email</label>
    <type>Email</type>
</CustomField>