force-app/main/default/objects/Opportunity/fields/Invite_Out_to_Ben_and_Sales_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Invite_Out_to_Ben_and_Sales_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Out to Ben and Sales Calendar</label>
    <type>Checkbox</type>
</CustomField>