force-app/main/default/objects/Opportunity/fields/Largest_Customer_Size_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Largest_Customer_Size_to_Target__c</fullName>
    <description>Largest customer size to target that is used to populate Partner Success Form in DocuSign</description>
    <inlineHelpText>What is the largest customer size (square footage, number of employees, revenue, production, etc.) that makes sense for us to target? - For use in DocuSign</inlineHelpText>
    <label>Largest Customer Size to Target</label>
    <length>150</length>
    <type>Text</type>
</CustomField>