force-app/main/default/objects/Opportunity/fields/Last_Appointment_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Appointment_Status_Change__c</fullName>
    <label>Last Appointment Status Change</label>
    <type>DateTime</type>
</CustomField>