force-app/main/default/objects/Opportunity/fields/Lead_Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>