force-app/main/default/objects/Opportunity/fields/Lead_Generated_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generated_By_Role__c</fullName>
    <description>Based on the the related Contact Appointment Generated By field</description>
    <formula>Opportunity_Generated_By__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Generated By Role</label>
    <type>Text</type>
</CustomField>