force-app/main/default/objects/Opportunity/fields/Lead_Source_Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Generated_By__c</fullName>
    <inlineHelpText>The originating source that drove a prospect to the AMG website.</inlineHelpText>
    <label>Lead Source Generated By</label>
    <length>75</length>
    <type>Text</type>
</CustomField>