force-app/main/default/objects/Opportunity/fields/Length_of_Contract_Months__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Contract_Months__c</fullName>
    <inlineHelpText>Please enter the number of months that the contract was signed for. (i.e. if it is a 2 year contract at $100/month, enter 24 in the &quot;Length of Contract&quot; field and $100 in the &quot;Amount&quot; field).</inlineHelpText>
    <label>Length of Contract (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>