force-app/main/default/objects/Opportunity/fields/LinkedIn_with_All_Meeting_Participants__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_with_All_Meeting_Participants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn with All Meeting Participants</label>
    <type>Checkbox</type>
</CustomField>