force-app/main/default/objects/Opportunity/fields/Listen_First_Then_Pitch_Like_an_Animal__c.field-meta.xml
<CustomField>
    <fullName>Listen_First_Then_Pitch_Like_an_Animal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>In the words of Ben. :)</inlineHelpText>
    <label>Listen First, Then Pitch Like an Animal</label>
    <type>Checkbox</type>
</CustomField>