force-app/main/default/objects/Opportunity/fields/Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip_Code__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Zip Code</label>
    <type>Text</type>
</CustomField>