force-app/main/default/objects/Opportunity/fields/Main_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Name__c</fullName>
    <label>Main Contact Name</label>
    <type>TextArea</type>
</CustomField>