force-app/main/default/objects/Opportunity/fields/Main_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Main_Contact_Phone__c</fullName>
    <label>Direct Phone</label>
    <type>Phone</type>
</CustomField>