force-app/main/default/objects/Opportunity/fields/Manager_Check_Sheet_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Manager_Check_Sheet_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager Check Sheet Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>