force-app/main/default/objects/Opportunity/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <description>Used by managers to provide feedback to reps on an opportunity.</description>
    <label>Manager Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>